Solved comments out of bounds bug

--- a/www/styles/video_player.css
+++ b/www/styles/video_player.css
@@ -2,6 +2,7 @@
 	width: 100%;
 	margin-top: 40px;
 	margin-bottom: 50px;
+	display: table;
 }
 
 video {
@@ -66,7 +67,7 @@ video {
 	padding-top: 10px;
 	padding-bottom: 10px;
     margin: 0 auto;
-    margin-bottom: 20px;
+    display: table;
 }
 
 #comments h1 {
@@ -97,6 +98,7 @@ video {
 
 .comment .usr_img img {
 	width: 50px;
+	border-radius: 25px;
 }
 
 .comment .usr_img figure {
